argocd/apps/kong-service/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kong-swagger-gateway
spec:
  gatewayClassName: kong-class
  listeners:
  - name: world-selector
    hostname: kong.swagger.com
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
