argocd/apps/kong-service/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: swagger-route
spec:
  hostnames:
  - kong.swagger.com
  parentRefs:
  - name: kong-swagger-gateway
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: api-svc
      port: 8080
      weight: 1
    matches:
    - path: 
       type: PathPrefix
       value: /
    - path:
       type: PathPrefix
       value: /api/v1/public/randomusers
    - path: 
       type: PathPrefix
       value: /api/v1/public/randomjokes
